# Changelog
All notable changes to this project will be documented in this file.

## [0.1.0] - 2020-08-17
### Added
- Base react application.
- HomePage and ProductPage.
- Base backend.
- Nodemon configuration.

### Fixed
- HomePage page.