@@ -1,16 +1,30 @@
-import React from 'react';
+import React, { useState, useEffect } from 'react';
 import { Link } from 'react-router-dom'
-import data from '../data';
+import axios from 'axios';
 
 export const HomePage = (props) => {
-    return (
-    <ul className="products">
+  const [products, setProducts] = useState([]);
+
+  useEffect(() => {
+    const fetchData = async () => {
+      const { data } = await axios.get("/api/products");
+      setProducts(data);
+    }
+    fetchData();
+    return () => {
+      //
+    };
+  }, [])
+
+  return (
+  <ul className="products">
     {
-      data.products.map(product =>
+      products.map(product =>
         <li key={product._id}>
           <div className="product">
             <Link to={'/product/' + product._id}>
               <img className="product-image" src={product.image} alt="product" />
+
             </Link>
             <div className="product-name">
               <Link to={'/product/' + product._id}>{product.name}</Link>
@@ -21,6 +35,6 @@ export const HomePage = (props) => {
           </div>
         </li>)
     }
-    </ul>
-    )
+ </ul>
+ )
 }
